force-app/main/default/objects/ManageRecordHistoryTracking__mdt/ManageRecordHistoryTracking__mdt.object-meta.xml
<CustomObject>
    <label>Object History Tracking</label>
    <pluralLabel>Object History Trackings</pluralLabel>
</CustomObject>