force-app/main/default/objects/ManageRecordHistoryTracking__mdt/fields/HistoryTrackingObjectName__c.field-meta.xml
<CustomField>
    <fullName>HistoryTrackingObjectName__c</fullName>
    <inlineHelpText>API name of the object containing history records for the tracked object.</inlineHelpText>
    <label>History Tracking Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>