force-app/main/default/objects/ManageRecordHistoryTracking__mdt/fields/RelationshipFieldName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipFieldName__c</fullName>
    <inlineHelpText>This field contain the api name of relationship field on history object pointing to parent object which need to be tracked.</inlineHelpText>
    <label>Relationship Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>