force-app/main/default/objects/ManageRecordHistoryTracking__mdt/fields/TrackedFieldName__c.field-meta.xml
<CustomField>
    <fullName>TrackedFieldName__c</fullName>
    <inlineHelpText>Comma separated list of fields api names which need to be tracked on history object.</inlineHelpText>
    <label>Tracked Fields List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>