force-app/main/default/objects/ManageRecordHistoryTracking__mdt/fields/Tracking_Object__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Object__c</fullName>
    <label>Tracking Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Object_History_Trackings</relationshipLabel>
    <relationshipName>Object_History_Trackings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>